--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
+    "file-type": "^17.1.6",
     "ioredis": "^5.2.2",
     "meilisearch": "^0.27.0",
+    "moment-timezone": "^0.5.34",
     "mysql2": "^2.3.3",
     "nestjs-paginate": "^4.1.0",
     "nodemailer": "^6.7.7",
@@ -48,7 +50,9 @@
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.5.0",
     "typeorm": "^0.3.7",
-    "winston": "^3.8.1"
+    "uuid": "^8.3.2",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -56,6 +60,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
