--- a/package.json
+++ b/package.json
@@ -35,14 +35,16 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
+    "express-session": "^1.17.3",
     "file-type": "^17.1.6",
     "ioredis": "^5.2.2",
     "meilisearch": "^0.27.0",
     "moment-timezone": "^0.5.34",
     "mysql2": "^2.3.3",
     "nestjs-paginate": "^4.1.0",
-    "nodemailer": "^6.7.7",
+    "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -58,10 +60,13 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
