--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "meilisearch": "^0.27.0",
     "moment-timezone": "^0.5.35",
     "mysql2": "^2.3.3",
+    "nestjs-form-data": "^1.7.1",
     "nestjs-paginate": "^4.2.2",
     "nodemailer": "^6.7.8",
     "otp-generator": "^4.0.0",
@@ -72,7 +73,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "^9.0.11",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
