--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/bull": "^0.6.1",
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.11",
@@ -38,6 +39,7 @@
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
+    "bull": "^4.8.5",
     "cache-manager": "^4.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -45,6 +47,7 @@
     "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
     "file-type": "^18.0.0",
+    "fs": "^0.0.1-security",
     "googleapis": "^107.0.0",
     "ioredis": "^5.2.3",
     "json-2-csv": "^3.17.1",
@@ -60,6 +63,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
@@ -74,6 +78,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.11",
+    "@types/bull": "^3.15.9",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
