--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/bull": "^0.6.1",
     "@nestjs/common": "^9.0.11",
@@ -33,18 +34,23 @@
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/multer": "^1.4.7",
     "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
     "bull": "^4.8.5",
     "cache-manager": "^4.1.0",
+    "circular-json": "^0.5.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "convert-csv-to-array": "^1.0.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "express-session": "^1.17.3",
     "file-type": "^18.0.0",
     "fs": "^0.0.1-security",
@@ -53,9 +59,11 @@
     "json-2-csv": "^3.17.1",
     "mailer": "^0.6.7",
     "meilisearch": "^0.27.0",
+    "minio": "^7.0.32",
     "moment-timezone": "^0.5.35",
     "mysql2": "^2.3.3",
     "nestjs-form-data": "^1.7.1",
+    "nestjs-minio-client": "^2.0.0",
     "nestjs-paginate": "^4.2.2",
     "nodemailer": "^6.7.8",
     "otp-generator": "^4.0.0",
@@ -69,6 +77,7 @@
     "rxjs": "^7.5.6",
     "schedule": "^0.5.0",
     "swagger-ui-express": "^4.5.0",
+    "twilio": "^3.82.1",
     "typeorm": "^0.3.7",
     "uuid": "^8.3.2",
     "winston": "^3.8.1",
